--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "phpstan/phpstan": "^1.6",
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
