--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: 1
+          POSTGRES_PASSWORD: dl032nh
           POSTGRES_DB: hexlet
         options: >-
           --health-cmd pg_isready
@@ -21,7 +21,7 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-          
+
     steps:
       - uses: actions/checkout@v1
       - name: Setup PHP
