--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,6 +32,18 @@ jobs:
       - name: PHP Security Checker
         uses: StephaneBour/actions-php-security-checker@1.1
 
+      - name: Laravel Migrate
+          env:
+            DB_CONNECTION: pgsql
+            DB_PORT: 5432
+            DB_DATABASE: hexlet
+            DB_USERNAME: postgres
+            DB_PASSWORD: dl032nh
+          run: |
+            cp .env.example .env
+            php artisan key:generate
+            php artisan migrate --force
+
       - name: Setup project
         run: make setup
 
