--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,6 +8,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+  services:
+    postgres:
+      image: postgres:12.9
+      env:
+        POSTGRES_DATABASE: postgres
+        POSTGRES_PASSWORD: dl032nh
+        POSTGRES_USER: postgres
+        POSTGRES_HOST: postgres
+      ports:
+        - 5432:5432
+      # Set health checks to wait until postgres has started
+      options: >-
+        --health-cmd pg_isready
+        --health-interval 10s
+        --health-timeout 5s
+        --health-retries 5
+
     steps:
       - uses: actions/checkout@v1
       - name: Setup PHP
