--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,10 +12,10 @@ jobs:
     postgres:
       image: postgres:12.9
       env:
-        POSTGRES_DATABASE: postgres
+        POSTGRES_DATABASE: hexlet
         POSTGRES_PASSWORD: dl032nh
-        POSTGRES_USER: postgres
-        POSTGRES_HOST: postgres
+        POSTGRES_USER: root
+        POSTGRES_HOST: 127.0.0.1
       ports:
         - 5432:5432
       # Set health checks to wait until postgres has started
@@ -24,7 +24,7 @@ jobs:
         --health-interval 10s
         --health-timeout 5s
         --health-retries 5
-
+        
     steps:
       - uses: actions/checkout@v1
       - name: Setup PHP
