--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,11 +11,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
 
       - name: PHP Security Checker
-        uses: StephaneBour/actions-php-security-checker@1.0
+        uses: StephaneBour/actions-php-security-checker@1.1
 
       - name: Setup project
         run: make setup
@@ -24,4 +29,4 @@ jobs:
         run: make lint
 
       - name: Execute tests
-        run: make test
+          run: make test
