--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=hexlet
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=dl032nh
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
