--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.4",
+        "imangazaliev/didom": "^2.0",
         "laracasts/flash": "^3.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "laravelcollective/html": "^6.3.0",
         "nesbot/carbon": "^2.58"
     },
     "require-dev": {
