--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,5 +28,13 @@ jobs:
       - name: Check lint
         run: make lint
 
-      - name: Execute tests
+      - name: Execute tests via PHPUnit
         run: make test
+      - name: Show test coverage
+        uses: paambaati/codeclimate-action@v2.6.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          coverageLocations: ${{ github.workplace }}/build/logs/clover.xml:clover
+          debug: true
